<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cv_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_bottom_sheet_thumb"
                app:tint="@color/surface_disabled" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_warning_state" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextXlBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/check_your_location"
                android:textColor="@color/text_primary" />

            <TextView
                style="@style/TextMdMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="@string/your_location_may_be_wrong_would_you_like_to_update_it_it_might_take_minute"
                android:textColor="@color/text_secondary" />

            <LinearLayout
                android:id="@+id/location_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_corner_6"
                android:backgroundTint="@color/secondary_surface"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="16dp">

                <TextView
                    style="@style/TextMdMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:singleLine="true"
                    android:text="@string/address"
                    android:textColor="@color/text_secondary" />

                <TextView
                    android:id="@+id/tv_location"
                    style="@style/TextMdMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="center_horizontal"
                    android:text="@string/n_a"
                    android:textColor="@color/primary_brand" />

            </LinearLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_dont_show"
                android:visibility="gone"
                style="@style/PrimaryCheckboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/don_t_show_again_update_on" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:text="@string/update_now"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="12dp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                style="@style/SecondaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/not_now"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>