<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">



        <ImageView
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_bottom_sheet_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/surface_disabled" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_warning_state" />

        <TextView
            style="@style/TextXlBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:text="@string/required_permissions"
            android:textColor="@color/text_primary" />

        <TextView
            style="@style/TextMdMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/this_app_collects_location_data_to_enable_tracking_even_when_the_app_is_closed_or_not_in_us"
            android:textColor="@color/text_secondary" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/PrimaryButtonStyle"
            android:id="@+id/btn_understand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/go_to_settings"
           />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            style="@style/SecondaryButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/dismiss"
     />

    </LinearLayout>

</FrameLayout>