<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/bg_bottom_sheet"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/activity_horizontal_margin">



        <ImageView
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_bottom_sheet_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/surface_disabled" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_warning_state" />

        <TextView
            style="@style/TextXlBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:text="@string/bluetooth_permission"
            android:textColor="@color/text_primary" />

        <TextView
            style="@style/TextMdMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/in_order_to_connect_to_the_eld_device_you_must_first_allow_the_bluetooth_permission_and_turn_it_on"
            android:textColor="@color/text_secondary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            style="@style/TextMdSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/ripple_corner_12"
            android:backgroundTint="@color/primary_brand"
            android:text="@string/ok"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:background="@drawable/ripple_corner_12"
            android:backgroundTint="@color/surface"
            style="@style/TextMdSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            android:textColor="@color/text_secondary" />

    </LinearLayout>

</FrameLayout>