<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/cv_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_bottom_sheet_thumb"
            app:tint="@color/surface_disabled" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@color/primary_brand"
            android:padding="12dp"
            android:src="@drawable/ic_cloudy"
            app:riv_mutate_background="true"
            app:riv_oval="true" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextXlBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/select_mode"
            android:textColor="@color/text_primary" />


        <TextView
            android:id="@+id/light_mode"
            style="@style/SelectableTextWithIconMdSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/light_mode"
            app:drawableStartCompat="@drawable/ic_sun" />

        <TextView
            android:id="@+id/dark_mode"
            style="@style/SelectableTextWithIconMdSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:text="@string/dark_mode"
            app:drawableStartCompat="@drawable/ic_moon" />

        <TextView
            android:id="@+id/system_mode"
            style="@style/SelectableTextWithIconMdSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/system"
            app:drawableStartCompat="@drawable/ic_sparkles" />


    </LinearLayout>


</FrameLayout>