<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/cv_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="8dp"
                android:src="@drawable/ic_bottom_sheet_thumb"
                app:tint="@color/surface_disabled" />

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/oval"
                android:backgroundTint="@color/primary_brand"
                android:padding="12dp"
                android:src="@drawable/translate"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TextXlBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/language_change"
                android:textColor="@color/text_primary" />

            <TextView
                android:id="@+id/tv_english_lang"
                style="@style/SelectableTextMdSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/english"
                app:drawableStartCompat="@drawable/flag_en" />

            <TextView
                android:id="@+id/tv_russian_lang"
                style="@style/SelectableTextMdSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/russian"
                app:drawableStartCompat="@drawable/flag_rus" />

            <TextView
                android:id="@+id/tv_turkmen_lang"
                style="@style/SelectableTextMdSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/turkmen"
                app:drawableStartCompat="@drawable/flag_tkm" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</FrameLayout>